# pacman

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CODE_REVIEW.md  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
assets/: maze.txt
cmake/: FindSDL2_image.cmake  FindSDL2_mixer.cmake
src/: asset-manager.cpp  asset-manager.h  asset-registry.cpp  asset-registry.h  audio-system.cpp  audio-system.h  board-manager.cpp  board-manager.h  constants.h  game-context.cpp  game-context.h  game-state.cpp  game-state.h  game.cpp  game.h  ghost.cpp  ghost.h  grid.cpp  grid.h  main.cpp  pacman.cpp  pacman.h  pellet.cpp  pellet.h  power-pellet.cpp  power-pellet.h  renderer.cpp  renderer.h  sprite-registry.h  sprite.cpp  sprite.h  vector2.cpp  vector2.h
